<resources>
    <string name="app_name">Marvel_V2.0</string>
    <string name="escribe_el_nombre">Escribe el nombre...</string>
    <string name="busca_tu_superh_roe">Busca tu superhéroe</string>
    <string name="sin_resultados">Sin resultados</string>
    <string name="links">Links</string>
    <string name="detalle">Details</string>
    <string name="wiki">Wiki</string>
    <string name="comiclink">Comics Links</string>
    <string name="recursos">Recursos</string>
    <string name="error">Error</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="comics">Comics</string>
    <string name="events">Events</string>
</resources>
